--- a/src/Application/Application.csproj
+++ b/src/Application/Application.csproj
@@ -14,4 +14,8 @@
       <PackageReference Include="MediatR" Version="12.2.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Core\Core.csproj" />
+    </ItemGroup>
+
 </Project>
